[package]
name = "macros"
version = "0.1.0"
authors = [ "Felipe Balbi <febalbi@microsoft.com>" ]
edition = "2021"
license = "MIT"
description = "Macros for the Power Sequencing Abstraction"
repository = "https://github.com/OpenDevicePartnership/embedded-power-sequence"
readme = "README.md"
keywords = [ "no_std", "embedded", "power", "sequence", "power-sequence" ]
categories = [ "embedded", "no-std" ]
rust-version = "1.75"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = { version = "2.0.100", features = ["full"] }
